# waves-c

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/crypto/: bolos_target.h  cx.h  os.c  os.h
src/crypto/key/: ledger_crypto.c  ledger_crypto.h  waves.c  waves.h
src/sodium/: keypair.c  keypair.h
src/sodium/private/: ed25519_ref10.c  ed25519_ref10.h  ed25519_ref10_fe_25_5.c  ed25519_ref10_fe_25_5.h
src/sodium/private/fe_25_5/: constants.h  fe.c  fe.h
tools/: CMakeLists.txt  README.md  argvparser.cpp  argvparser.h  main.c  seed.txt  tool1.cpp
